--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <ul class="sec1">
             <li><a href="https://www.facebook.com/profile.php?id=100077199324382&mibextid=ZbWKwL" target="_blank"><img src="images/facebook.png"></a></li>
             <li><a href="https://www.instagram.com/siddhantshinde10?igsh=Zm9xdHd5b2s1d3M2" target="_blank"><img src="images/instagram.png"></a></li>
-            <li><a href="https://www.linkedin.com/in/siddhantshinde?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><img src="Images/icons8-linkedin-41.png"></a></li>
+            <li><a href="https://www.linkedin.com/in/siddhantshinde?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><img src="Images/linkedin.png"></a></li>
         </ul>
 
         <ul class="menu">
