--- a/School/sports.html
+++ b/School/sports.html
@@ -67,33 +67,33 @@
     <div class="row col-md-10 mt-5 mx-auto">
         <h3>Kho-Kho</h3>
         <hr>
-        <div class="col-md-4 mx-auto p-1 mt-2" data-aos="zoom-in" data-aos-duration="1500"><img src="images/kabaddi1.jpg" alt=""></div>
-        <div class="col-md-4 mx-auto p-1 mt-2" data-aos="zoom-in" data-aos-duration="1500"><img src="images/kabaddi2.jpg" alt=""></div>
-        <div class="col-md-4 mx-auto p-1 mt-2" data-aos="zoom-in" data-aos-duration="1500"><img src="images/kabaddi3.jpg" alt=""></div>
+        <div class="col-md-4 mx-auto p-1 mt-2" data-aos="zoom-in" data-aos-duration="1500"><img src="images/kho1.jpg" alt=""></div>
+        <div class="col-md-4 mx-auto p-1 mt-2" data-aos="zoom-in" data-aos-duration="1500"><img src="images/kho2.jpg" alt=""></div>
+        <div class="col-md-4 mx-auto p-1 mt-2" data-aos="zoom-in" data-aos-duration="1500"><img src="images/kho3.jpg" alt=""></div>
     </div>
 
     <div class="row col-md-10 mt-5 mx-auto">
         <h3>Long Jump</h3>
         <hr>
-        <div class="col-md-4 mx-auto p-1 mt-2" data-aos="zoom-in" data-aos-duration="1500"><img src="images/kabaddi1.jpg" alt=""></div>
-        <div class="col-md-4 mx-auto p-1 mt-2" data-aos="zoom-in" data-aos-duration="1500"><img src="images/kabaddi2.jpg" alt=""></div>
-        <div class="col-md-4 mx-auto p-1 mt-2" data-aos="zoom-in" data-aos-duration="1500"><img src="images/kabaddi3.jpg" alt=""></div>
+        <div class="col-md-4 mx-auto p-1 mt-2" data-aos="zoom-in" data-aos-duration="1500"><img src="images/long1.jpg" alt=""></div>
+        <div class="col-md-4 mx-auto p-1 mt-2" data-aos="zoom-in" data-aos-duration="1500"><img src="images/long2.jpg" alt=""></div>
+        <div class="col-md-4 mx-auto p-1 mt-2" data-aos="zoom-in" data-aos-duration="1500"><img src="images/long3.jpg" alt=""></div>
     </div>
 
     <div class="row col-md-10 mt-5 mx-auto">
         <h3>Chess</h3>
         <hr>
-        <div class="col-md-4 mx-auto p-1 mt-2" data-aos="zoom-in" data-aos-duration="1500"><img src="images/kabaddi1.jpg" alt=""></div>
-        <div class="col-md-4 mx-auto p-1 mt-2" data-aos="zoom-in" data-aos-duration="1500"><img src="images/kabaddi2.jpg" alt=""></div>
-        <div class="col-md-4 mx-auto p-1 mt-2" data-aos="zoom-in" data-aos-duration="1500"><img src="images/kabaddi3.jpg" alt=""></div>
+        <div class="col-md-4 mx-auto p-1 mt-2" data-aos="zoom-in" data-aos-duration="1500"><img src="images/chess1.jpg" alt=""></div>
+        <div class="col-md-4 mx-auto p-1 mt-2" data-aos="zoom-in" data-aos-duration="1500"><img src="images/chess2.jpg" alt=""></div>
+        <div class="col-md-4 mx-auto p-1 mt-2" data-aos="zoom-in" data-aos-duration="1500"><img src="images/chess3.jpg" alt=""></div>
     </div>
 
     <div class="row col-md-10 mt-5 mx-auto">
         <h3>Tug of War</h3>
         <hr>
-        <div class="col-md-4 mx-auto p-1 mt-2" data-aos="zoom-in" data-aos-duration="1500"><img src="images/kabaddi1.jpg" alt=""></div>
-        <div class="col-md-4 mx-auto p-1 mt-2" data-aos="zoom-in" data-aos-duration="1500"><img src="images/kabaddi2.jpg" alt=""></div>
-        <div class="col-md-4 mx-auto p-1 mt-2" data-aos="zoom-in" data-aos-duration="1500"><img src="images/kabaddi3.jpg" alt=""></div>
+        <div class="col-md-4 mx-auto p-1 mt-2" data-aos="zoom-in" data-aos-duration="1500"><img src="images/tug1.jpg" alt=""></div>
+        <div class="col-md-4 mx-auto p-1 mt-2" data-aos="zoom-in" data-aos-duration="1500"><img src="images/tug2.jpg" alt=""></div>
+        <div class="col-md-4 mx-auto p-1 mt-2" data-aos="zoom-in" data-aos-duration="1500"><img src="images/tug3.jpg" alt=""></div>
     </div>
     </div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
