--- a/School/contact.html
+++ b/School/contact.html
@@ -16,7 +16,7 @@
         }
         .bg{
             color: white;
-            background-color: rgb(96, 96, 253);
+            background-color: rgba(96, 96, 253,0.5);
         }
         .box{
             border-right: 1px solid black;
@@ -85,7 +85,7 @@
         </div>
     </div>
     <footer>
-        <div class="row col-md-10 mx-auto mt-5">
+        <div class="row mx-auto mt-5">
         <div class="col-md-4 box p-4 mx-auto bg">
             <h6>Mobile</h6><br>
             +91 8975161302 <br>
