--- a/extras.html
+++ b/extras.html
@@ -64,11 +64,11 @@
         <div class="row px-5">
             <div class="round col-12 col-sm-6 col-md-4 p-3">
                 <div><img data-aos="zoom-in" data-aos-duration="1500" src="images/sports2.JPG" height="100%" width="100%" alt=""></div>
-                <div class="round text-center p-2"><h5><b class="text-white">SCHOOL GEMES ZONAL KARATE COMPETITION 2017-20 (SILVER MEDAL)</b></h5></div>
+                <div class="round text-center p-2"><h5><b class="text-white">SCHOOL GAMES ZONAL KARATE COMPETITION 2017-20 (SILVER MEDAL)</b></h5></div>
             </div>
             <div class="round col-12 col-sm-6 col-md-4 p-3">
                 <div><img data-aos="zoom-in" data-aos-duration="1500" src="images/sports4.JPG" height="100%" width="100%" alt=""></div>
-                <div class="round text-center p-2"><h5><b class="text-white">SCHOOL GEMES DISTRICT KARATE COMPETITION 2017 (GOLD MEDAL)</b></h5></div>
+                <div class="round text-center p-2"><h5><b class="text-white">SCHOOL GAMES DISTRICT KARATE COMPETITION 2017 (GOLD MEDAL)</b></h5></div>
             </div>
             <div class="round col-12 col-sm-6 col-md-4 p-3">
                 <div><img data-aos="zoom-in" data-aos-duration="1500" src="images/sports5.png" height="100%" width="100%" alt=""></div>
