--- a/School/index.html
+++ b/School/index.html
@@ -42,7 +42,7 @@
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"><b>Gallery</b></a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="sports.html"><b>Sports</b></a></li>
-                                <li><a class="dropdown-item" href="annual.html"><b>Sports</b></a></li>
+                                <li><a class="dropdown-item" href="annual.html"><b>Annual Day</b></a></li>
                                 <li><a class="dropdown-item" href="picnic.html"><b>Picnic</b></a></li>
                             </ul>
                         </li>
