--- a/projects.html
+++ b/projects.html
@@ -77,12 +77,26 @@
             <h2>Primary School</h2>
             <hr>
             <div class="mt-3 row">
-                <div class="col-md-4" data-aos="zoom-in-left" data-aos-duration="1500"><a href="School/index.html" target="_blank"><img src="images/school.png" height="90%" width="100%"></a></div>
+                <div class="col-md-4" data-aos="zoom-in-left" data-aos-duration="1500"><a href="C:\Users\HP\Desktop\Projects\School\index.html" target="_blank"><img src="images/school.png" height="90%" width="100%"></a></div>
                 <div class="col-md-8"  data-aos="zoom-in-right" data-aos-duration="1500">
                     <h4>Designed and developed a comprehensive website for a Marathi primary school, highlighting the school's rich cultural heritage, academic programs, and extracurricular activities, providing an engaging and user-friendly experience for students, parents, and staff.<br></h4>
                 <ul>
                     <li><h5><b>Web Technologies Used :</b> HTML, CSS, Bootstrap, JavaScript</h5></li>
                     <li><h5><b>Features :</b>A user-friendly, interactive webpage with seamless functionality, vibrant design, and dedicated sections for academics, activities, and events.</h5></ul>
+                </ul>
+                </div>
+            </div>
+        </div>
+        <div class="sec1" data-aos="zoom-in-left" data-aos-duration="1000">
+            <h2>Flight Price Prediction Model</h2>
+            <hr>
+            <div class="mt-3 row">
+                <div class="col-md-4" data-aos="zoom-in-left" data-aos-duration="1500"><a href=https://siddhantshinde10.github.io/Flight-Price-Prediction/ target="_blank"><img src="images/flight.png" height="90%" width="100%"></a></div>
+                <div class="col-md-8"  data-aos="zoom-in-right" data-aos-duration="1500">
+                    <h4>Developed a flight price prediction model using machine learning techniques to optimize travel planning and cost savings.<br></h4>
+                <ul>
+                    <li><h5><b>Web Technologies Used :</b> Python, Jupyter Notebook, Python libraries </h5></li>
+                    <li><h5><b>Features :</b> Provide a brief introduction to the flight prediction model with quick access to prediction tools.</h5></ul>
                 </ul>
                 </div>
             </div>
