--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,7 @@
             <h2>Primary School</h2>
             <hr>
             <div class="mt-3 row">
-                <div class="col-md-4" data-aos="zoom-in-left" data-aos-duration="1500"><a href="C:\Users\HP\Desktop\Projects\School\index.html" target="_blank"><img src="images/school.png" height="90%" width="100%"></a></div>
+                <div class="col-md-4" data-aos="zoom-in-left" data-aos-duration="1500"><a href="School\index.html" target="_blank"><img src="images/school.png" height="90%" width="100%"></a></div>
                 <div class="col-md-8"  data-aos="zoom-in-right" data-aos-duration="1500">
                     <h4>Designed and developed a comprehensive website for a Marathi primary school, highlighting the school's rich cultural heritage, academic programs, and extracurricular activities, providing an engaging and user-friendly experience for students, parents, and staff.<br></h4>
                 <ul>
