--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h2>I'm <span>Siddhant Shinde,</span></h2>
                 <h3>Final Year BTech Student,</h3>
                 <p class="para">I am currently pursuing my B.Tech in Electronics Engineering from Veermata Jijabai<br>Technological Institute (VJTI), Mumbai. With a strong interest in the software domain,<br> I am actively seeking full-time job opportunities upon graduation. <br></p>
-                <a href="https://drive.google.com/file/d/1EHhrsfQ5QeFpBs4LuJ6JKOg_SK-AHZ3c/view?usp=drivesdk" target="_blank" class="btn btn-light">Resume</a>
+                <a href="https://drive.google.com/file/d/1XMiPI9o4_DBz0DpT7S0fuTdLU7C0byaz/view?usp=drive_link" target="_blank" class="btn btn-light">Resume</a>
             </div>
         </div>
 
